mini-metrics-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mini-metrics
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: mini-metrics.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mini-metrics-service
                port:
                  number: 80
    # - host: api.mini-metrics.example
    #   http:
    #     paths:
    #       - backend:
    #           service:
    #             name: back-mini-metrics-service
    #             port:
    #               number: 80
    #         path: /
    #         pathType: Prefix
status:
  loadBalancer:
    ingress:
      # - ip: 172.27.132.88
      - ip: 172.26.143.110
